change wait truck loading api

--- a/app/src/main/res/layout/pattern_cargo_detail.xml
+++ b/app/src/main/res/layout/pattern_cargo_detail.xml
@@ -137,6 +137,8 @@
                 android:layout_below="@id/customerLable"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textColor="@color/black"
                 tools:text="@string/tools_mohammad" />
 
