--- a/app/src/main/res/drawable/shape_40.xml
+++ b/app/src/main/res/drawable/shape_40.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
-        android:radius="@dimen/_7ssp"/>
+        android:radius="@dimen/_5ssp"/>
     <solid android:color="@color/mainBackground"/>
+    <stroke android:color="@color/black"
+        android:width="@dimen/_1sdp"/>
 </shape>
