--- a/app/src/main/res/layout/fragment_docks.xml
+++ b/app/src/main/res/layout/fragment_docks.xml
@@ -15,7 +15,7 @@
             android:padding="@dimen/padding_all"
             android:clipToPadding="false"
             android:clipChildren="false"
-            tools:background="@color/mainBackground"
+            android:background="@color/mainBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
