--- a/app/src/main/res/layout/pattern_dock_group.xml
+++ b/app/src/main/res/layout/pattern_dock_group.xml
@@ -5,13 +5,13 @@
         android:layout_height="wrap_content"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@drawable/shape_all_corner"
-        android:backgroundTint="@color/yellowGray"
+        android:background="@color/mainBackground"
         android:layout_margin="@dimen/margin_low_2">
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:padding="@dimen/padding_desktop_rel"
             android:orientation="vertical"
+            android:background="@color/mainBackground"
             android:id="@+id/rel_warehouse"
             android:layout_height="wrap_content">
             <RelativeLayout
@@ -25,22 +25,30 @@
                     <TextView
                         style="@style/pattern_receieve_tv1"
                         tools:text="@string/warehouseD"
+                        android:text="@string/warehouseD"
                         android:layout_margin="@dimen/margin_pattern_receive_bottom"/>
                     <TextView
                         android:id="@+id/warehouseCode"
                         style="@style/pattern_receieve_tv1"
                         tools:text="@string/tools_a220820_023535"
+                        android:textStyle="bold"
                         android:layout_margin="@dimen/margin_pattern_receive_bottom"/>
                 </LinearLayout>
             </RelativeLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/mainToolbar"
-                android:layout_marginTop="@dimen/marginTop5ForLayouts"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/pattern_dock" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_background_rect_white_6"
+                android:layout_below="@id/mainToolbar">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/marginTop5ForLayouts"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/pattern_dock" />
+            </LinearLayout>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
