--- a/app/src/main/res/layout/pattern_dock_group.xml
+++ b/app/src/main/res/layout/pattern_dock_group.xml
@@ -1,56 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:padding="@dimen/padding_desktop_rel"
+        android:orientation="vertical"
+        android:id="@+id/rel_warehouse"
         android:background="@color/mainBackground"
-        android:layout_margin="@dimen/margin_low_2">
-        <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_height="wrap_content">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:padding="@dimen/padding_desktop_rel"
-            android:orientation="vertical"
-            android:background="@color/mainBackground"
-            android:id="@+id/rel_warehouse"
             android:layout_height="wrap_content">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:orientation="horizontal">
-                    <TextView
-                        style="@style/pattern_receieve_tv1"
-                        tools:text="@string/warehouseD"
-                        android:text="@string/warehouseD"
-                        android:layout_margin="@dimen/margin_pattern_receive_bottom"/>
-                    <TextView
-                        android:id="@+id/warehouseCode"
-                        style="@style/pattern_receieve_tv1"
-                        tools:text="@string/tools_a220820_023535"
-                        android:textStyle="bold"
-                        android:layout_margin="@dimen/margin_pattern_receive_bottom"/>
-                </LinearLayout>
-            </RelativeLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_background_rect_white_6"
-                android:layout_below="@id/mainToolbar">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/marginTop5ForLayouts"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/pattern_dock" />
+                android:layout_alignParentStart="true"
+                android:orientation="horizontal">
+                <TextView
+                    style="@style/pattern_receieve_tv1"
+                    tools:text="@string/warehouseD"
+                    android:text="@string/warehouseD"
+                    android:layout_margin="@dimen/margin_pattern_receive_bottom"/>
+                <TextView
+                    android:id="@+id/warehouseCode"
+                    style="@style/pattern_receieve_tv1"
+                    tools:text="@string/tools_a220820_023535"
+                    android:textStyle="bold"
+                    android:layout_margin="@dimen/margin_pattern_receive_bottom"/>
             </LinearLayout>
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_background_rect_white_6"
+            android:layout_below="@id/mainToolbar">
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/marginTop5ForLayouts"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/pattern_dock" />
+        </LinearLayout>
 
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 </layout>
