--- a/app/src/main/res/layout/pattern_dock_group.xml
+++ b/app/src/main/res/layout/pattern_dock_group.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:padding="@dimen/padding_desktop_rel"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:orientation="vertical"
         android:id="@+id/rel_warehouse"
         android:background="@color/mainBackground"
@@ -30,20 +31,14 @@
                     android:layout_margin="@dimen/margin_pattern_receive_bottom"/>
             </LinearLayout>
         </RelativeLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/marginTop5ForLayouts"
+            android:orientation="vertical"
             android:background="@drawable/shape_background_rect_white_6"
-            android:layout_below="@id/mainToolbar">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/marginTop5ForLayouts"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/pattern_dock" />
-        </LinearLayout>
+             />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
