--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,7 @@
     <color name="filterSolid">#F2AC20</color>
     <color name="lowOrange">#78F2AC20</color>
     <color name="green">#27AE60</color>
+    <color name="lightGreen">#16A085</color>
     <color name="progressYellow">#DAC614</color>
     <color name="pink">#F89797</color>
     <color name="lowPink">#F5C9C9</color>
