--- a/app/src/main/res/layout/dialog_change_product.xml
+++ b/app/src/main/res/layout/dialog_change_product.xml
@@ -61,6 +61,8 @@
             <EditText
                 android:id="@+id/locationCode"
                 style="@style/ediForSmallDialog"
+                android:focusable="false"
+                android:clickable="true"
                 android:layout_marginTop="@dimen/marginTop5ForLayouts"
                 android:hint="@string/location_code"
                 android:inputType="text" />
