--- a/app/src/main/res/layout/dialog_serial_scan.xml
+++ b/app/src/main/res/layout/dialog_serial_scan.xml
@@ -160,6 +160,7 @@
         android:id="@+id/scannerView"
         android:elevation="@dimen/scannerElevation"
         android:visibility="gone"
+        tools:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:showIn="@layout/fragment_detail_receiving"  />
