--- a/app/src/main/res/layout/layout_serial_scan_top_info.xml
+++ b/app/src/main/res/layout/layout_serial_scan_top_info.xml
@@ -48,6 +48,7 @@
             tools:text="@string/tools_GoodSet" />
 
         <RelativeLayout
+            android:id="@+id/relOwnerCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
